--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "dev": "nodemon server/index.js",
-    "lint": "eslint client/src/index.jsx server/index.js"
+    "lint": "eslint client/src/index.jsx server/index.js",
+    "test": "mocha specs/spec.js"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "chai": "^4.2.0",
     "express": "^4.17.1",
+    "mongoose": "^4.13.21",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
