--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,14 @@
 image: node:latest
 
-services:
-  - mongo:latest
-
 cache:
   paths:
     - node_modules/
+
+services:
+  - mongo:latest
+
+variables:
+  MONGO_URI: 'mongodb://mongo/seller-catalog'
 
 stages:
   - build
