--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dev": "webpack -d --watch",
     "dev": "nodemon server/index.js",
     "start": "nohup node server/index.js &",
-    "lint": "eslint client/src/index.jsx server services",
+    "lint": "eslint . --ext .js",
     "seed": "node database/seed.js",
     "test": "nyc mocha specs/spec.js"
   },
