--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^5.10.7",
     "path": "^0.12.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
