--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "nohup node server/index.js &",
     "lint": "eslint . --ext .js",
     "seed": "node database/seed.js",
-    "test": "nyc mocha specs/spec.js"
+    "test": "nyc mocha specs/server.js"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
@@ -34,6 +34,8 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
