--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.1",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "mocha": "^8.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "style-loader": "^2.0.0",
