--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "engines": {
     "node": ">=6.13.0"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
+  },
   "scripts": {
     "react-dev": "webpack -d --watch",
     "react": "webpack",
@@ -15,11 +20,12 @@
     "lint": "eslint . --ext .js",
     "seed": "node database/seed.js",
     "test:server": "nyc mocha specs/server.js",
-    "test:client": "jest"
+    "test:client": "jest --coverage"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-flow": "^7.12.1",
     "babel-jest": "^26.6.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-react-css-modules": "^5.2.6",
@@ -53,6 +59,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.1",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
