--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-flow": "^7.12.1",
+    "@material-ui/core": "^4.11.0",
     "babel-jest": "^26.6.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-react-css-modules": "^5.2.6",
